# lightweight_slam

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: kitti.yaml
include/myslam/: camera.h  common_include.h  config.h  covert.h  cv_ext.h  dataset.h  feature_point.h  frame.h  g2o_ext.h  loop_closure.h  map.h  mapper.h  mappoint.h  optimizing.h  pose.h  system.h  test.h  tracking.h  viewer.h
src/: frame.cpp  loop_closure.cpp  map.cpp  mapper.cpp  myslam.cpp  optimizing.cpp  system.cpp  tracking.cpp  viewer.cpp
src/utils/: camera.cpp  config.cpp  cv_ext.cpp  dataset.cpp  g2o_ext.cpp  mappoint.cpp  pose.cpp
