<?xml version="1.0"?>
<package format="2">
  <name>light_weight_slam</name>
  <version>0.0.0</version>
  <description>This is a light weight slam</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="drafens@todo.todo">drafens</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv4</build_depend>
  <build_depend>eigen3</build_depend>
  <build_depend>g2o</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>dbow3</build_depend>
  <build_depend>pangolin</build_depend>
  <build_depend>glog</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>opencv4</exec_depend>
  <exec_depend>eigen3</exec_depend>
  <exec_depend>g2o</exec_depend>
  <exec_depend>pcl</exec_depend>
  <exec_depend>dbow3</exec_depend>
  <exec_depend>pangolin</exec_depend>
  <exec_depend>glog</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
